--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,23 +5,22 @@
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
+        android:label="Blood Donor Info Saver"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".AddNewDonorActivity"></activity>
-        <activity
-            android:name=".RegistrationActivity"
-            android:label="Register">
+        <activity android:name=".LogInActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".AddNewDonorActivity" />
         <activity
-            android:name=".MainActivity"
-            android:label="Home"></activity>
+            android:name=".RegistrationActivity">
+        </activity>
+        <activity
+            android:name=".MainActivity" />
     </application>
 
 </manifest>
